tmpfs: Overhaul option handling on remount

On remount, we must accept all the same options as on initial mount.
For parameters which we're unable to modify on the fly, fail only if
the new value is different from the existing one.

PR:		295096
MFC after:	1 week
Reviewed by:	kib
Differential Revision:	https://reviews.freebsd.org/D57044